--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=08205ba33b648da09e7c5c9157e1129a
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
