admin_new_delete_2

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -7,3 +7,4 @@ twig:
     paths:
         # point this wherever your images live
         'public/img': images
+        'public/img/uploads': images
