--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    uploads_directory: '%kernel.project_dir%/public/img/uploads'  
+    uploads_directory: '%kernel.project_dir%/public/img/uploads'
+    app.hcaptcha_secret_key: '%env(HCAPTCHA_SECRET_KEY)%'  
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -15,11 +16,12 @@ services:
 
     App\Service\FileUploader:
         arguments:
-            $targetDirectory: '%uploads_directory%'    
-
-       
+            $targetDirectory: '%uploads_directory%'
             
-
+    App\Service\HCaptcha:
+        arguments:
+            $hCaptchaSercretKey: '%app.hcaptcha_secret_key%'
+            
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
