--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,7 +20,7 @@ services:
             
     App\Service\HCaptcha:
         arguments:
-            $hCaptchaSercretKey: '%app.hcaptcha_secret_key%'
+            $hCaptchaSecretKey: '%app.hcaptcha_secret_key%'
             
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
