--- a/.env.test
+++ b/.env.test
@@ -5,3 +5,5 @@ SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 #Hcaptcha
+HCAPTCHA_SITEKEY="8ff64c97-f0f7-4e42-a700-1df57e144185"
+HCAPTCHA_SECRET_KEY="0x66cA099A700B07dd94fFcB5C931dBDB8093018BA"
