--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,7 +21,6 @@ security:
                 entry_point: App\Security\LoginFormAuthenticator
                 authenticators:
                     - App\Security\LoginFormAuthenticator
-                    - App\Security\LoginFormProductAuthenticator
             
             logout:
                 path: logout
@@ -38,4 +37,4 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/user, roles: ROLE_USER }
